создан файл chirkova_busting,  добвлена команда input{chirkova_busting}

--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -54,7 +54,7 @@ $^2$Петрозаводский Государственный Университет}
 \begin{articletext}
 
 \section{Введение}
-В статье представлен обзор методов и алгоритмов разрешения лексической многозначности (word-sense disambiguation или WSD). Верный выбор в словаре одного из значений многозначного слова или фразы в зависимости от контекста и является успешным результатом решения WSD-задачи.
+В статье представлен обзор методов и алгоритмов разрешения лексической многозначности (word-sense disambiguation или WSD). Верный выбор в словаре одного из значений многозначного слова или фразы в зависимости от контекста является успешным результатом решения WSD-задачи.
 
 Приведем несколько примеров употребления слов <<коса>> и <<косой>>, найденных с помощью Национального корпуса русского языка (http://ruscorpora.ru) по запросу <<коса>>:
 
@@ -68,7 +68,7 @@ $^2$Петрозаводский Государственный Университет}
 
 Первые четыре примера дают три разных значения существительного <<коса>>: ряд косарей, сельскохозяйственное орудие, заплетенные волосы, протяженная речная отмель. Последний пример содержит прилагательное <<косой>>, совпадающее с одной из форм существительного <<коса>>. Все эти значения и часть речи читатель легко определяет по контексту. 
 
-Именно многозначность слов, их неоднозначность и зависимость значений слов от контекста являются причиной возникновения такой задачи и одновременно обуславливают сложность ее решения. Уверенное решение WSD-задачи необходимо во многих приложениях, связанных с автоматической обработкой текста (информационный поиск, машинный перевод и т.п.) и, на наш взгляд, является предтечей искусственного интеллекта.
+Именно многозначность слов, их неоднозначность и зависимость значений слов от контекста являются причиной возникновения такой задачи и одновременно обуславливают сложность ее решения. Уверенное решение WSD-задачи необходимо во многих приложениях, связанных с автоматической обработкой текста (информационный поиск, машинный перевод и тому подобное) и, на наш взгляд, является предтечей искусственного интеллекта.
 
 Для этой задачи известно большое количество алгоритмов и методов решения, которые можно разделить на \cite{Lukash 2011}, \cite{Navigli 2009}: 
 
@@ -90,7 +90,7 @@ $^2$Петрозаводский Государственный Университет}
 Далее будут представлены примеры методов и алгоритмов разрешения лексической многозначности, разбитые на три группы: 
 \begin{itemize}
 \itemс использованием машинного обучения: метод ансамбля байесовских классификаторов, нейронные сети, бустинг как метод улучшения точности алгоритма обучения, сравнение методов машинного обучения;
-\itemбез машинного обучения: различение значений на основе контекстных векторов, расширенных словарными значениями; поиск и кластеризация похожих слов; кластеризация фрагментов биомедицинских текстов; кластеризация посредством комитетом;
+\itemбез машинного обучения: различение значений на основе контекстных векторов, расширенных словарными значениями; поиск и кластеризация похожих слов; кластеризация фрагментов биомедицинских текстов; кластеризация посредством комитетов;
 \itemметоды, основанные на знаниях: лексические цепочки, сочетаемостные ограничения на основе байесовских сетей.
 \end{itemize}
  Данная статья является <<введением>> в проблематику WSD, поскольку эта тема является чрезвычайно обширной и существуют сотни интересных работ по каждому из указанных направлений.
@@ -110,7 +110,7 @@ $^2$Петрозаводский Государственный Университет}
 В работе Педерсена \cite{Pedersen 2000} рассматривается подход к разрешению лексической многозначности слов (WSD), подразумевающий создание ансамбля наивных байесовских классификаторов, каждый из которых основан на оценке вероятности вхождения определенных слов в контекст целевого слова, значение которого определяется.
 \parindent=0,5cm
 
-При разрешении лексической многозначности, представленной как задача обучения с учителем, применяют статистические методы и методы машинного обучения к размеченному корпусу. В таких методах словам корпуса, для которых указано значение, соответствует набор языковых свойств. Педерсен \cite{Pedersen 2000} относит к языковым свойствам два вида особенностей: так называемые простые лексические особенности (shallow lexical features) и более сложные лингвистически обусловленные особенности (lingvistically motivated features). К первым относятся совместная встречаемость слов (co-occurence) и словосочетания (collocations), в то время как вторые включают в себя такие свойства как часть речи и отношение действие-объект. Обычно алгоритмы обучения строят модели классификаторов значений по этим языковым свойствам.
+При разрешении лексической многозначности, представленном в виде задачи обучения с учителем, применяют статистические методы и методы машинного обучения к размеченному корпусу. В таких методах словам корпуса, для которых указано значение, соответствует набор языковых свойств. Педерсен \cite{Pedersen 2000} относит к языковым свойствам два вида особенностей: так называемые простые лексические признаки (shallow lexical features) и более сложные лингвистически обусловленные признаки (lingvistically motivated features). К первым относятся совместная встречаемость слов (co-occurence) и словосочетания (collocations), в то время как вторые включают в себя такие свойства, как часть речи и отношение действие-объект. Обычно алгоритмы обучения строят модели классификаторов значений по этим языковым свойствам.
 
 Автор статьи \cite{Pedersen 2000} предлагает подход, основанный на объединении ряда простых классификаторов в ансамбль, который разрешает многозначность с помощью голосования простым большинством голосов. Педерсен утверждает \cite{Pedersen 2000}, что, во-первых, более сложные алгоритмы обычно не улучшают точность разрешения. Во-вторых, совместная встречаемость слов и словосочетаний имеют большее влияние на точность разрешения, чем оперирование более сложной лингвистической информацией.
 \parindent=0,5cm
@@ -193,79 +193,73 @@ causing attention to be given to & 11\\
 
 \parindent=0,5cm
 
-Использование нейронных сетей (NN)  для WSD было предложено в 80-е гг. в работах \cite{COTTRELL 1983,WALTZ 1985}. В типичной NN на вход   подается   слово, значение которого требуется установить, т.е. целевое (\textit{target}) слово, а также --- контекст (фраза) его содержащий. Узлы выхода соответствуют различным значениям слова. В процессе обучения, когда значение тренировочного целевого слова известно, веса связующих узлы соединений (связей), настраиваются таким образом, чтобы по окончании обучения выходной узел, соответствующий истинному значению целевого слова, имел наибольшую активность. Веса соединений могут быть  положительными или отрицательными, и настраиваются посредством рекуррентных алгоритмов (алгоритм обратного распространения ошибки,  рекуррентный метод наименьших квадратов и т.д.). Сеть может содержать скрытые (hidden) слои, состоящие из узлов, соединенных как прямыми, так и обратными связями. Для представления входной информации обычно используется одна из двух схем:  распределенная (distributed) или локалистская (localist ) (\cite{Hinton 1986}, \cite{COTTRELL 1989}, \cite{Azzini}). 
+Использование нейронных сетей (NN)  для WSD было предложено в 80-е гг. в работах \cite{COTTRELL 1983,WALTZ 1985}. В типичной NN на вход   подается   слово, значение которого требуется установить, то есть целевое (\textit{target}) слово, а также --- контекст (фраза) его содержащий. Узлы выхода соответствуют различным значениям слова. В процессе обучения, когда значение тренировочного целевого слова известно, веса связующих узлы соединений (связей) настраиваются таким образом, чтобы по окончании обучения выходной узел, соответствующий истинному значению целевого слова, имел наибольшую активность. Веса соединений могут быть  положительными или отрицательными, и настраиваются посредством рекуррентных алгоритмов (алгоритм обратного распространения ошибки,  рекуррентный метод наименьших квадратов и так далее). Сеть может содержать скрытые (hidden) слои, состоящие из узлов, соединенных как прямыми, так и обратными связями. Для представления входной информации обычно используется одна из двух схем:  распределенная (distributed) или локалистская (localist ) (\cite{Azzini},  \cite{COTTRELL 1989}, \cite{Hinton 1986} ). 
 
-В работе \cite{VERONIS 1990} описан метод автоматического построения \textbf{\textit{очень больших нейронных сетей}} (VLNN) с помощью текстов, извлекаемых из машиночитаемых словарей (MRD), и рассмотрено использование этих сетей в задачах разрешения лексической неоднозначности. Поясним основную идею VLNN.  Широко известен метод Леска \cite{LESK 1986}  использования  информации  из MRD для  задачи  WSD.  Суть этого метода состоит в вычислении  так называемой \textit{степени пересечения}, т.е.  количества общих слов в словарных определениях слов из контекста (<<окна>>) условного размера, содержащего целевое слово. Основной недостаток метода Леска --- зависимость  от  словарной  статьи, то есть от слов, входящих в нее. Стратегия преодоления  этого  недостатка --- использование словарных статей, определяющих слова, входящие в другие словарные статьи, начиная со словарных статей, соответствующих  словам  из  контекста. Таким образом, образуются  достаточно  длинные   пути  из слов, входящих в словарные статьи. Эта  идея  лежит  в  основе  топологии VgN. В работе \cite{VERONIS 1990}  для построения  VLNN использован  словарь  Collins  English  Dictionary.
+В работе \cite{VERONIS 1990} описан метод автоматического построения \textbf{\textit{очень больших нейронных сетей}} (VLNN) с помощью текстов, извлекаемых из машиночитаемых словарей (MRD), и рассмотрено использование этих сетей в задачах разрешения лексической неоднозначности. Поясним основную идею VLNN.  Широко известен метод Леска \cite{LESK 1986}  использования  информации  из MRD для  задачи  WSD.  Суть этого метода состоит в вычислении  так называемой \textit{степени пересечения}, то есть  количества общих слов в словарных определениях слов из контекста (<<окна>>) условного размера, содержащего целевое слово. Основной недостаток метода Леска --- зависимость  от  словарной  статьи, то есть от слов, входящих в нее. Стратегия преодоления  этого  недостатка --- использование словарных статей, определяющих слова, входящие в другие словарные статьи, начиная со словарных статей, соответствующих  словам  из  контекста. Таким образом, образуются  достаточно  длинные   пути  из слов, входящих в словарные статьи. Эта  идея  лежит  в  основе  топологии VgN. В работе \cite{VERONIS 1990}  для построения  VLNN использован  словарь  Collins  English  Dictionary.
 
 \textbf{Топология сети.} Целевое слово представлено  узлом, соединенным активирующими  связями со смысловыми узлами, представляющими все возможные значения слова, имеющиеся  в словарных статьях. Каждый смысловой узел, в свою очередь, соединен  активирующими  связями с узлами, представляющими  слова в словарной статье, соответствующей толкованию данного значения. Процесс соединения повторяется многократно, создавая сверхбольшую сеть взаимосвязанных узлов. В идеале сеть может содержать весь словарь. Авторы, по практическим соображениям, ограничиваются несколькими тысячами узлов и 10–20 тысячами соединений. Слова представлены своими леммами (каноническими формами). Узлы, представляющие различные значения данного слова, соединены запрещающими (inhibitory) связями.  
 
 \textbf{Алгоритм.} При запуске сети первыми активируются узлы входного  слова  (согласно принятой кодировке). Затем  каждый  входной узел посылает активирующий сигнал своим смысловым узлам, с которыми он соединен. В результате  сигналы распространяются по всей сети в течение определенного числа циклов. В каждом цикле узлы слова и  его значений получают обратные сигналы от узлов, соединенных с ними. Узлы конкурирующих значений посылают взаимно подавляющие сигналы.  Взаимодействие  сигналов  обратной  связи  и  подавления,  в соответствии со стратегией <<победитель получает все>>, позволяет увеличить активацию узлов-слов и соответствующих им правильных узлов-значений,  одновременно  уменьшая  активацию  узлов,  соответствующих неправильным значениям. После нескольких десятков  циклов сеть стабилизируется  в  состоянии, в котором активированы  только узлы-значения с наиболее активированными связями  с    узлами-словами. При обучении сети  используется  метод  обратного  распространения (\textit{back  propagation}).
 
-\section{Краткое введение в бустинг}
+%\section{Краткое введение в бустинг}
+%
+%\begin{flushright}
+%\textit{Т. В. Степкина, Ю. В. Чиркова}
+%\end{flushright} 
 
-\begin{flushright}
-\textit{Т. В. Степкина, Ю. В. Чиркова}
-\end{flushright} 
+%В статье \cite{Freund 1999} говорится о бустинге --- общем методе улучшения точности алгоритма обучения. В работе приводится алгоритм AdaBoost с %описанием необходимой теории бустинга, а также показывается связь с методом опорных векторов и объясняются причины, по которым переобучение не %влияет на бустинг.  
+%
+%Бустинг --- это общий и доказуемо-эффективный метод получения очень точного правила предсказания путем комбинирования грубых и умеренно неточных %эмпирических правил \cite{Freund 1999}. Метод бустинга разработан на основе модели обучения "PAC" (probably approximately correct learning).
+%
+%Алгоритм AdaBoost был предложен в 1995 году Фройндом и Шапиро \cite{Freund 1996}. В нём исправлены многие недостатки предыдущих алгоритмов %бустинга.
+%
+%AdaBoost является адаптивным алгоритмом \cite{Freund 1999}, поскольку он может адаптироваться к уровням ошибок отдельных слабых гипотез. В названии %"Ada" является сокращением от «adaptive» (адаптивный).
+%
+%На вход алгоритма поступает обучающая выборка $(x_i;y_i);..;(x_m;y_m)$, где каждый элемент $x_i$ принадлежит некоторому домену или признаковому %пространству $X$, и каждая метка $y_i$ принадлежит некоторому набору меток $Y$. Для каждого обучающего примера $i$ вес распределения для целых $t$ %обозначается $D_t$ $(i)$, где $t$ --- это шаг алгоритма. За начальное распределение весов принимается $D_1(i)=~ 1/m$. Пусть метки принимают значения из %множества  $Y=\{-1,1\}$. 
 
-В статье \cite{Freund 1999} говорится о бустинге --- общем методе улучшения точности алгоритма обучения. В работе приводится алгоритм AdaBoost с описанием необходимой теории бустинга, а также показывается связь с методом опорных векторов и объясняются причины, по которым переобучение не влияет на бустинг.  
+%Далее на каждом шаге $t$, где $t = 1 \ldots T$, выполняется обучение слабого обучаемого с использованием текущего распределения $D_t$, после чего %строится слабая гипотеза $h_t:~ X \to \{-1; 1\}$ с ошибкой первого рода $\epsilon_t=\Sigma_{\displaystyle (i:h_t (x_i)\ne y_i)}D_t(i)$, по которой выбирается %уровень значимости $\alpha_t=\frac{\displaystyle 1}{\displaystyle 2}ln(\frac{\displaystyle 1-\epsilon_t}{\displaystyle \epsilon_t})$ и строится новое распределение %для следующего шага
+%$$
+%D_{t+1}(i)=\frac{D_{t^i}}{Z_t} \times 
+%\begin{cases}
+%e^{-\alpha t}\text{, если }h_t (x_i) = y_i \\
+%e^{\alpha t}\text{, если }h_t (x_i)\ne y_i
+%\end{cases}
+%=
+%$$
+%$$
+%= \frac{D_t (i)exp(-\alpha_t y_i h_t (x_i))}{Z_t}. 
+%$$
+%
+%Конечная гипотеза $H(x)$ ---  это среднее из большинства решений $T$ слабых гипотез, где $\alpha_t$ --- вес, присвоенный гипотезе $h_t$.
 
-Бустинг --- это общий и доказуемо-эффективный метод получения очень точного правила предсказания путем комбинирования грубых и умеренно неточных эмпирических правил \cite{Freund 1999}. Метод бустинга разработан на основе модели обучения "PAC" (probably approximately correct learning).
+%$$
+%H(x)=sign(\sum_{t=1}^T\alpha_t h_t(x))
+%$$
+%
+%Идея алгоритма заключается в выборе набора весов для обучающей выборки. Первоначально все веса примеров устанавливаются одинаково, но на каждом %круге цикла веса неправильно классифицированных по гипотезе $h_t$ примеров увеличиваются, таким образом, получают веса, которые относятся к сложным %примерам.
 
-Алгоритм AdaBoost был предложен в 1995 году Фройндом и Шапиро \cite{Freund 1996}. В нём исправлены многие недостатки предыдущих алгоритмов бустинга.
+%Основное теоретическое свойство AdaBoost~ --- это способность алгоритма уменьшать ошибку обучения \cite{Freund 1999}. Фройнд и Шапиро показали, что, так %как каждая слабая гипотеза немного лучше случайного выбора, ошибка обучения уменьшается с экспоненциальной скоростью.
 
-AdaBoost является адаптивным алгоритмом \cite{Freund 1999}, поскольку он может адаптироваться к уровням ошибок отдельных слабых гипотез. В названии "Ada" является сокращением от «adaptive» (адаптивный).
+%В статье \cite{Freund 1999} показано как ограничена ошибка обобщения конечной гипотезы в терминах ошибки обучения, размера выборки m, VC размерности %(размерности Вапника --- Червоненкиса \cite{Schapire 1997}) пространства слабых гипотез и количества циклов Т. Также получена граница, не зависящая от Т. %Это показывает, что бустинг AdaBoost не подвержен эффекту переобучения.
 
-На вход алгоритма поступает обучающая выборка $(x_i;y_i);..;(x_m;y_m)$, где каждый элемент $x_i$ принадлежит некоторому домену или признаковому пространству $X$, и каждая метка $y_i$ принадлежит некоторому набору меток $Y$. Для каждого обучающего примера $i$ вес распределения для целых $t$ обозначается $D_t$ $(i)$, где $t$ --- это шаг алгоритма. За начальное распределение весов принимается $D_1(i)=~ 1/m$. Пусть метки принимают значения из множества  $Y=\{-1,1\}$. 
+%Так как ошибка обучения и ошибка обобщения ограничены, как показано в статье \cite{Freund 1999}, этот алгоритм действительно является бустинговым %алгоритмом в том смысле, что он может эффективно преобразовать слабый алгоритм обучения в сильный, который может породить гипотезу со сколь угодно %малой частотой ошибок, имея достаточное количество данных.
 
-Далее на каждом шаге $t$, где $t = 1 \ldots T$, выполняется обучение слабого обучаемого с использованием текущего распределения $D_t$, после чего строится слабая гипотеза $h_t:~ X \to \{-1; 1\}$ с ошибкой первого рода $\epsilon_t=\Sigma_{\displaystyle (i:h_t (x_i)\ne y_i)}D_t(i)$, по которой выбирается уровень значимости $\alpha_t=\frac{\displaystyle 1}{\displaystyle 2}ln(\frac{\displaystyle 1-\epsilon_t}{\displaystyle \epsilon_t})$ и строится новое распределение для следующего шага
-%\bfullwidth
-%\begin{equation*}
-$$
-D_{t+1}(i)=\frac{D_{t^i}}{Z_t} \times 
-\begin{cases}
-e^{-\alpha t}\text{, если }h_t (x_i) = y_i \\
-e^{\alpha t}\text{, если }h_t (x_i)\ne y_i
-\end{cases}
-=
-$$
-$$
-= \frac{D_t (i)exp(-\alpha_t y_i h_t (x_i))}{Z_t}. 
-$$
-%\end{equation*}
-%\efullwidth
+%После того, как авторы рассмотрели бинарный случай, где целью является различие лишь между двумя возможными классами, они переходят к рассмотрению %мультиклассного, более приближенного к реальности. Есть несколько способов приведения AdaBoost к мультиклассному случаю. Самое простое обобщение %называется AdaBoost.M1 \cite{Freund 1997}, которое является приемлемым, если слабый обучаемый может достичь достаточно высокой точности на %распределениях, созданных AdaBoost. Тем не менее, этот метод завершается неудачно, если слабый ученик не может достичь хотя бы 50\% точности при работе %на этих  распределениях. Для такого случая было разработано несколько методов:
 
-Конечная гипотеза $H(x)$ ---  это среднее из большинства решений $T$ слабых гипотез, где $\alpha_t$ --- вес, присвоенный гипотезе $h_t$.
+%\begin{enumerate}
+%\item Методы, которые работают за счет преобразования мультиклассной задачи в большую бинарную задачу или в набор бинарных задач. Однако, эти методы %требуют дополнительных усилий в разработке слабого алгоритма обучения.
+%\item Технология, которая включает в себя метод Диттерича и Бакири --- метод выходных кодов, исправляющих ошибки \cite{Schapire 1997}.
+%\end{enumerate}
 
-%\bfullwidth
-%\begin{equation*}
-$$
-H(x)=sign(\sum_{t=1}^T\alpha_t h_t(x))
-$$
-%\end{equation*}
-%\efullwidth
+%AdaBoost обладает определенными преимуществами. Его быстро и просто запрограммировать. Он не имеет никаких параметров для настройки, за исключением %количества циклов. Он не требует никаких предварительных знаний о слабом обучаемом и поэтому может быть скомбинирован с любым методом для %нахождения слабых гипотез.
 
-Идея алгоритма заключается в выборе набора весов для обучающей выборки. Первоначально все веса примеров устанавливаются одинаково, но на каждом круге цикла веса неправильно классифицированных по гипотезе $h_t$ примеров увеличиваются, таким образом, получают веса, которые относятся к сложным примерам.
+%Недостатки метода заключаются в следующем. Фактическая производительность бустинга на конкретной задаче явно зависит от данных и слабого обучаемого. %Теоретически, бустинг может выполниться плохо, если данных недостаточно, слабые гипотезы слишком сложные, или наоборот слишком слабые. Также бустинг %особенно восприимчив к шуму.
 
-Основное теоретическое свойство AdaBoost~ --- это способность алгоритма уменьшать ошибку обучения \cite{Freund 1999}. Фройнд и Шапиро показали, что, так как каждая слабая гипотеза немного лучше случайного выбора, ошибка обучения уменьшается с экспоненциальной скоростью.
+%AdaBoost был протестирован эмпирическим путем многими исследователями. Например, Фройнд и Шапиро проверили AdaBoost на множестве эталонных наборов %данных UCI \cite{Merz 1998} с использованием C4.5 \cite{Quinlan 1993} как слабого алгоритма обучения, а также алгоритм, который находит самое лучшее %дерево решений с одним тестом. После проведения эксперимента был сделан вывод, что бустинг даже слабых деревьев решений с одним тестом, как правило, %дает хорошие результаты, в то время как бустинг C4.5, как правило, дает алгоритм дерева принятия решений значительно улучшенной производительности.
 
-В статье \cite{Freund 1999} показано как ограничена ошибка обобщения конечной гипотезы в терминах ошибки обучения, размера выборки m, VC размерности (размерности Вапника --- Червоненкиса \cite{Schapire 1997}) пространства слабых гипотез и количества циклов Т. Также получена граница, не зависящая от Т. Это показывает, что бустинг AdaBoost не подвержен эффекту переобучения.
+%Почти во всех этих экспериментах и для всех показателей эффективности бустинг работает так же хорошо или значительно лучше, чем в других методах %испытаний. Бустинг также применяется к фильтрации текстов, проблемам ранжирования и проблемам классификации, возникающих при обработке естественного %языка.
 
-Так как ошибка обучения и ошибка обобщения ограничены, как показано в статье \cite{Freund 1999}, этот алгоритм действительно является бустинговым алгоритмом в том смысле, что он может эффективно преобразовать слабый алгоритм обучения в сильный, который может породить гипотезу со сколь угодно малой частотой ошибок, имея достаточное количество данных.
-
-После того, как авторы рассмотрели бинарный случай, где целью является различие лишь между двумя возможными классами, они переходят к рассмотрению мультиклассного, более приближенного к реальности. Есть несколько способов приведения AdaBoost к мультиклассному случаю. Самое простое обобщение называется AdaBoost.M1 \cite{Freund 1997}, которое является приемлемым, если слабый обучаемый может достичь достаточно высокой точности на распределениях, созданных AdaBoost. Тем не менее, этот метод завершается неудачно, если слабый ученик не может достичь хотя бы 50\% точности при работе на этих  распределениях. Для такого случая было разработано несколько методов:
-
-\begin{enumerate}
-\item Методы, которые работают за счет преобразования мультиклассной задачи в большую бинарную задачу или в набор бинарных задач. Однако, эти методы требуют дополнительных усилий в разработке слабого алгоритма обучения.
-\item Технология, которая включает в себя метод Диттерича и Бакири --- метод выходных кодов, исправляющих ошибки \cite{Schapire 1997}.
-\end{enumerate}
-
-AdaBoost обладает определенными преимуществами. Его быстро и просто запрограммировать. Он не имеет никаких параметров для настройки, за исключением количества циклов. Он не требует никаких предварительных знаний о слабом обучаемом и поэтому может быть скомбинирован с любым методом для нахождения слабых гипотез.
-
-Недостатки метода заключаются в следующем. Фактическая производительность бустинга на конкретной задаче явно зависит от данных и слабого обучаемого. Теоретически, бустинг может выполниться плохо, если данных недостаточно, слабые гипотезы слишком сложные, или наоборот слишком слабые. Также бустинг особенно восприимчив к шуму.
-
-AdaBoost был протестирован эмпирическим путем многими исследователями. Например, Фройнд и Шапиро проверили AdaBoost на множестве эталонных наборов данных UCI \cite{Merz 1998} с использованием C4.5 \cite{Quinlan 1993} как слабого алгоритма обучения, а также алгоритм, который находит самое лучшее дерево решений с одним тестом. После проведения эксперимента был сделан вывод, что бустинг даже слабых деревьев решений с одним тестом, как правило, дает хорошие результаты, в то время как бустинг C4.5, как правило, дает алгоритм дерева принятия решений значительно улучшенной производительности.
-
-Почти во всех этих экспериментах и для всех показателей эффективности бустинг работает так же хорошо или значительно лучше, чем в других методах испытаний. Бустинг также применяется к фильтрации текстов, проблемам ранжирования и проблемам классификации, возникающих при обработке естественного языка.
+\input{./chapter/chirkova_busting.tex}
 
 \section{Сравнительные эксперименты в WSD: роль предпочтений в машинном обучении}
 
@@ -278,7 +272,7 @@ AdaBoost был протестирован эмпирическим путем многими исследователями. Например,
 В машинном обучении под термином \textit{bias} (пристрастие, тенденция, предпочтение)  понимается любое основание для выбора одного обобщения другому, вместо строгого соответствия примерам \cite{Mooney 1996}. В деревьях принятия решений предпочтение (\textit{bias}) отдается простым деревьям решений, в нейронных сетях --- линейным пороговым функциям, а в байесовском классификаторе --- функциям, учитывающим условную независимость свойств. Чем лучше <<предпочтение>> обучающегося алгоритма соответствует характеристикам конкретной задачи, тем лучше будет результат. Большинство обучающихся алгоритмов обладают <<предпочтением>> наподобие Бритвы Оккама, в таких алгоритмах выбираются гипотезы, которые могут быть представлены меньшим количеством информации на каком-нибудь языке представлений. Однако компактность, с которой (деревья решений, дизъюнктивная нормальная форма, сети с линейным пороговым значением) представляют конкретные функции --- может существенно различаться. Поэтому различные <<предпочтительные>> оценки могут работать лучше или хуже в конкретных задачах. Одной из основных целей в машинном обучении является поиск <<предпочтений>> с целью решения прикладных практических задач.
 \parindent=0,5cm
 
-Выбор правильного <<предпочтения>> и обучающегося алгоритма является сложной задачей. Простым подходом является автоматизация выбора метода при помощи внутренней перекрестной валидации. Другой подход meta-learning заключается в том, чтобы обучиться набору правил (или другому классификатору), предсказывающему, когда обучающийся алгоритм будет срабатывать наилучшим образом на примере с набором свойств присущих проблеме.
+Выбор правильного <<предпочтения>> и обучающегося алгоритма является сложной задачей. Простым подходом является автоматизация выбора метода на основе результатов внутренней перекрестной валидации. Другой подход meta-learning заключается в том, чтобы обучиться набору правил (или другому классификатору), предсказывающему, когда обучающийся алгоритм будет срабатывать наилучшим образом на примере с набором свойств присущих проблеме.
 \parindent=0,5cm
 
 Описанный в \cite{Mooney 1996} эксперимент заключается в определении значения слова \textit{line} (англ. \textit{линия}) среди 6 возможных вариантов (\textit{строка, ряд, дивизия, телефон, веревка, продуктовая линия}). Данные для проведения экспериментов взяты из работы \cite{Leacock 1993}.  
