--- a/wsd_part1/wsd_part1_blind_review.tex
+++ b/wsd_part1/wsd_part1_blind_review.tex
@@ -943,6 +943,12 @@ $Score(Chain) > Average(Scores) + 2 \times StandardDeviation(Scores)$
 \bibitem{Lukash 2011}
 \textit{Н.~В.~Лукашевич.~} Тезаурусы в задачах информационного поиска. Издательство МГУ, 2011. 495 с.
 
+\bibitem{Marmanis}
+\textit{Х.~Марманис, Д.~Бабенко.} Алгоритмы интеллектуального Интернета. Передовые методики сбора, анализа и обработки данных. – Пер. с англ. – СПб.: Символ-Плюс, 2011. 480 с.
+
+\bibitem{Paclin}
+\textit{Н.~Б.~Паклин, В.~И.~Орешков} Бизнес-аналитика: от данных к знаниям: Учебное пособие. 2-е изд., испр. --- СПб.: Питер, 2013. --- 704 с.
+
 \bibitem{Abney 1999}
 \textit{S.~Abney and M.~Light.~}Hiding a semantic hierarchy in a markov model. In Proceedings of the Workshop on Unsupervised Learning in Natural Language Processing, ACL. 1999.
 
