--- a/wsd_part1/wsd_part1_blind_review.tex
+++ b/wsd_part1/wsd_part1_blind_review.tex
@@ -944,10 +944,10 @@ $Score(Chain) > Average(Scores) + 2 \times StandardDeviation(Scores)$
 \textit{Н.~В.~Лукашевич.~} Тезаурусы в задачах информационного поиска. Издательство МГУ, 2011. 495 с.
 
 \bibitem{Marmanis}
-\textit{Х.~Марманис, Д.~Бабенко.} Алгоритмы интеллектуального Интернета. Передовые методики сбора, анализа и обработки данных. – Пер. с англ. – СПб.: Символ-Плюс, 2011. 480 с.
+\textit{Х.~Марманис, Д.~Бабенко.~}Алгоритмы интеллектуального Интернета. Передовые методики сбора, анализа и обработки данных. – Пер. с англ. – СПб.: Символ-Плюс, 2011. 480 с.
 
 \bibitem{Paclin}
-\textit{Н.~Б.~Паклин, В.~И.~Орешков} Бизнес-аналитика: от данных к знаниям: Учебное пособие. 2-е изд., испр. --- СПб.: Питер, 2013. --- 704 с.
+\textit{Н.~Б.~Паклин, В.~И.~Орешков~}Бизнес-аналитика: от данных к знаниям: Учебное пособие. 2-е изд., испр. --- СПб.: Питер, 2013. --- 704 с.
 
 \bibitem{Abney 1999}
 \textit{S.~Abney and M.~Light.~}Hiding a semantic hierarchy in a markov model. In Proceedings of the Workshop on Unsupervised Learning in Natural Language Processing, ACL. 1999.
@@ -960,6 +960,9 @@ $Score(Chain) > Average(Scores) + 2 \times StandardDeviation(Scores)$
 
 \bibitem{Berry 1993}
 \textit{M.~Berry, T.~Do, G.~O’Brien, V.~Krishna, and S.~Varadhan.~}SVDPACK (version 1.0) user’s guide. Technical Report CS-93-194, University of Tennessee at Knoxville, Computer Science Department, April 1993.
+
+\bibitem{Breiman}
+\textit{L.~Breiman.~}Arcing classifiers. The Annals of Statistics. Vol 26 (3), 1998, pp. 801–849.
 
 \bibitem{Bruce 1994}
 \textit{R.~Bruce and J.~Wiebe.~}Word-sense disambiguation using decomposable models. In Proceedings of the 32nd Annual Meeting of the Association for Computational Linguistics, 1994, pp. 139–146.
