--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -208,6 +208,14 @@ $^2$Петрозаводский Государственный Универси
 %\bibitem{Do Thuy Duong 2011}
 %\textit{Duong D. T. }Automated text summarization. Graduation Thesis. Hanoi University. 2011. 
 
+\bibitem{esc1}
+\textit{Escudero G., Marquez L. and Rigau G.}Using LazyBoosting for Word Sense Disambiguation. In Proceedings of the Second 
+International Workshop on evaluating Word Sense Disambiguation Systems.Toulouse, France, 2001.
+
+\bibitem{esc2}
+\textit{Escudero G., Marquez L. and Rigau G.}Boosting Applied to Word Sense Disambiguation. In Proceedings of the 12th 
+European Conference on Machine Learning, ECML. Barcelona, Catalonia. 2000. 
+
 \bibitem{Freund 1999}
 \textit{Freund Y., Schapire R. E. }A Short Introduction to Boosting // AT\&T Labs Research, Shannon Laboratory.  1999.
 
@@ -310,7 +318,11 @@ An Illustration of the Role of Bias in Machine Learning / Department of Computer
 
 \bibitem{Savova 2005}
 \textit{Savova G., Pedersen T., Purandare A., Kulkarni A. }Resolving ambiguities in biomedical text with unsupervised clustering approaches / University of Minnesota Supercomputing Institute Research Report, 2005.
-                          
+
+\bibitem{schapire99}
+\textit{Schapire R. E. and Singer Y. } Improved Boosting   Algorithms   Using   Confidence-rated
+Predictions. Machine Learning, 37(3):297–336.                          
+
 \bibitem{Schapire 1998}
 \textit{Schapire R. E. and Singer Y. }Improved boosting a predictions // In Proceedings of the Eleventh Annual Confere Theory, 1998. P. 80–91. 
 
