typos fixed in Yankevich chapter

--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -23,15 +23,13 @@
 \udk{УДК 81.32}
 
 \rustitle{Обзор методов и алгоритмов разрешения \newline лексической многозначности: Введение}
-\engtitle{Word-sense disambiguation methods and algorithms review: Introduction}
+\engtitle{A review of word-sense disambiguation methods and algorithms: Introduction}
 
 \rusauthor{Т.~В.~Каушинис$^2$,  А.~Н.~Кириллов$^1$,  Н.~И.~Коржицкий$^2$, А.~А.~Крижановский$^1$, А.~В.~Пилинович$^2$, И.~А.~Сихонина$^2$,  А.~М.~Спиркова$^2$, В.~Г.~Старкова$^1$, Т.~В.~Степкина$^2$, С.~С.~Ткач$^2$, Ю.~В.~Чиркова$^1$, А.~Л.~Чухарев$^1$,  Д.~С.~Шорец$^2$,  Д.~Ю.~Янкевич$^2$, Е.~А.~Ярышкина$^2$}
 \engauthor{T.~V.~Kaushinis$^2$, A.~N.~Kirillov$^1$, N.~I.~Korzhitsky$^2$, A.~A.~Krizhanovsky$^1$, A.~V.~Pilinovich$^2$, I.~A.~Sikhonina$^2$, A.~M.~Spirkova$^2$, V.~G.~Starkova$^1$, T.~V.~Stepkina$^2$, S.~S.~Tkach$^2$, J.~V.~Chirkova$^1$, A.~L.~Chuharev$^1$, D.~S.~Shorets$^2$, D.~Y.~Yankevich$^2$, E.~A.~Yaryshkina$^2$}
 
-
 \organization{$^1$Институт прикладных математических исследований Карельского научного центра РАН \\
 $^2$Петрозаводский Государственный Университет}
-
 
 \rusabstract{Разрешение лексической многозначности --- это задача выбора между разными значениями 
 слов и словосочетаний в словаре в зависимости от контекста. 
@@ -42,7 +40,7 @@ $^2$Петрозаводский Государственный Университет}
 (3) методы, использующие внешние словарные источники информации (машиночитаемые словари, тезаурусы, онтологии). 
 Статья распространяется на правах свободной лицензии “CC Attribution”.
 }
-\engabstract{The word-sense disambiguation  task is the classification task, where the goal is to predict the meaning of words and phrases with the help of surrounding text. The purpose of this short review is to acquaint the reader with the general directions of word sense disambiguation methods and algorithms. The paper consists of three main parts: (1) supervised (machine learning) approaches to word-sense disambiguation, (2) unsupervised approaches based on unlabeled corpora and (3) knowledge-based approaches to word-sense disambiguation, where machine-readable dictionaries, thesauri, ontologies are used. This work is licensed under the CC Attribution license.}
+\engabstract{The word-sense disambiguation  task is a classification task, where the goal is to predict the meaning of words and phrases with the help of surrounding text. The purpose of this short review is to acquaint the reader with the general directions of word sense disambiguation methods and algorithms. The paper consists of three main parts: (1) supervised (machine learning) approaches to word-sense disambiguation, (2) unsupervised approaches based on unlabeled corpora and (3) knowledge-based approaches to word-sense disambiguation, where machine-readable dictionaries, thesauri, ontologies are used. This paper is licensed under the CC Attribution license.}
 
 \ruskeywords{алгоритм, метод, разрешение лексической многозначности.}
 \engkeywords{algorithm, method, word-sense disambiguation.}
